@@ -4,8 +4,6 @@ package com.zhub.ppeng.common;
 import lombok.AllArgsConstructor;
 import lombok.Getter;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 /**
@@ -24,7 +22,7 @@ public enum ResponseStatus {
 
 
     SUCCESS("200", "success"),
-    FAIL("500", "failed"),
+    FAIL("501", "failed"),
 
     HTTP_STATUS_200("200", "ok"), // 请求成功
     HTTP_STATUS_400("400", "request error"), // 请求错误
@@ -32,9 +30,7 @@ public enum ResponseStatus {
     HTTP_STATUS_403("403", "no authorities"), // 没有权限
     HTTP_STATUS_500("500", "server error"); // 服务器内部错误
 
-    public static final List<ResponseStatus> HTTP_STATUS_ALL = Collections.unmodifiableList(
-            Arrays.asList(HTTP_STATUS_200, HTTP_STATUS_400, HTTP_STATUS_401, HTTP_STATUS_403, HTTP_STATUS_500
-            ));
+    public static final List<ResponseStatus> HTTP_STATUS_ALL = List.of(HTTP_STATUS_200, HTTP_STATUS_400, HTTP_STATUS_401, HTTP_STATUS_403, HTTP_STATUS_500);
 
     /**
      * Code
